Add Buttons Hero Logo Navbar Search

--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+:root {
+  --color-black: #000000;
+  --color-green: #34c94b;
+}
+
